--- a/appAndroid/AndroidManifest.xml
+++ b/appAndroid/AndroidManifest.xml
@@ -8,9 +8,11 @@
         android:label="@string/app_name" android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
+        <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.LAUNCHER" />
         <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="OpenCreadorCraftLan" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:scheme="OpenCreadorCraftLan" android:host="*" />
       </intent-filter>
     </activity>
     <service
