--- a/.github/workflows/LinuxCI.yml
+++ b/.github/workflows/LinuxCI.yml
@@ -14,13 +14,25 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: 'temurin'
-      - name: SetUpLinuxFiles
-        run: |
-          cp resourcesLinux/pom.xml appJava/
       - name: Build with Maven
         run: |
           mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile=appJava/libs/DS-Desktop-Notify.jar -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
           mvn -B package --file appJava/pom.xml
+      - name: Build Linux App
+        run: |
+          jpackage \
+            --name CreadorCraftLan \
+            --app-version 1.0.0-beta \
+            --input appJava/target/ \
+            --main-jar CreadorCraftLan-1.0.0-beta.jar \
+            --main-class org.CreadoresProgram.CreadorCraftLan.MainActivity \
+            --icon appJava/src/main/resources/ic_launcher.jpeg \
+            --type deb \
+            --file-associations resourcesLinux/opencreadorcraftlan.assoc \
+            --dest appJava/target/image \
+            --linux-deb-maintainer "https://github.com/Creadores-Program/" \
+            --linux-shortcut \
+            --linux-deb-description "Crea Servidores LAN fácilmente para Juegos de CreadorCraft" \
       - name: UploadArtifact
         uses: actions/upload-artifact@v4
         with:
