--- a/.github/workflows/LinuxCI.yml
+++ b/.github/workflows/LinuxCI.yml
@@ -32,7 +32,7 @@ jobs:
             --dest appJava/target/image \
             --linux-deb-maintainer "https://github.com/Creadores-Program/" \
             --linux-shortcut \
-            --linux-deb-description "Crea Servidores LAN fácilmente para Juegos de CreadorCraft" \
+            --linux-deb-description "Crea Servidores LAN fácilmente para Juegos de CreadorCraft"
       - name: UploadArtifact
         uses: actions/upload-artifact@v4
         with:
