--- a/.github/workflows/LinuxCI.yml
+++ b/.github/workflows/LinuxCI.yml
@@ -31,7 +31,8 @@ jobs:
             --file-associations resourcesLinux/opencreadorcraftlan.assoc \
             --dest appJava/target/image \
             --linux-deb-maintainer "https://github.com/Creadores-Program/" \
-            --linux-shortcut
+            --linux-shortcut \
+            --verbose
       - name: UploadArtifact
         uses: actions/upload-artifact@v4
         with:
