--- a/.github/workflows/MacCI.yml
+++ b/.github/workflows/MacCI.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           jpackage \
             --name CreadorCraftLan \
-            --app-version 1.0.0beta \
+            --app-version 1.0 \
             --input appJava/target/ \
             --main-jar CreadorCraftLan-1.0.0-beta.jar \
             --main-class org.CreadoresProgram.CreadorCraftLan.MainActivity \
