--- a/.github/workflows/WindowsCI.yml
+++ b/.github/workflows/WindowsCI.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         run: |
-          mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile=appJava\libs\DS-Desktop-Notify.jar -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
+          mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile=appJava\libs\DS-Desktop-Notify.jar -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar
           mvn -B package --file appJava\pom.xml
       - name: Build Windows App
         run: |
