--- a/.github/workflows/WindowsCI.yml
+++ b/.github/workflows/WindowsCI.yml
@@ -16,20 +16,20 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         run: |
-          mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile=appJava\libs\DS-Desktop-Notify.jar -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar
+          mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile="${{ github.workspace }}\appJava\libs\DS-Desktop-Notify.jar" -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
           mvn -B package --file appJava\pom.xml
       - name: Build Windows App
         run: |
           jpackage ^
             --name CreadorCraftLan ^
             --app-version 1.0.0-beta ^
-            --input appJava\target\ ^
+            --input "${{ github.workspace }}\appJava\target\" ^
             --main-jar CreadorCraftLan-1.0.0-beta.jar ^
             --main-class org.CreadoresProgram.CreadorCraftLan.MainActivity ^
-            --icon appJava\src\main\resources\ic_launcher.ico ^
+            --icon "${{ github.workspace }}\appJava\src\main\resources\ic_launcher.ico" ^
             --type exe ^
-            --file-associations resourcesWindows\opencreadorcraftlan.assoc ^
-            --dest appJava\target\image ^
+            --file-associations "${{ github.workspace }}\resourcesWindows\opencreadorcraftlan.assoc" ^
+            --dest "${{ github.workspace }}\appJava\target\image" ^
             --verbose
       - name: UploadArtifact
         uses: actions/upload-artifact@v4
