--- a/.github/workflows/WindowsCI.yml
+++ b/.github/workflows/WindowsCI.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build with Maven
         run: |
           mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile="${{ github.workspace }}\appJava\libs\DS-Desktop-Notify.jar" -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
-          mvn -B package --file appJava\pom.xml
+          mvn -B package --file ${{ github.workspace }}\appJava\pom.xml
       - name: Build Windows App
         run: |
           jpackage ^
