--- a/.github/workflows/WindowsCI.yml
+++ b/.github/workflows/WindowsCI.yml
@@ -20,17 +20,18 @@ jobs:
           mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile="${{ github.workspace }}\appJava\libs\DS-Desktop-Notify.jar" -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
           mvn -B package --file ${{ github.workspace }}\appJava\pom.xml
       - name: Build Windows App
+        shell: cmd
         run: |
-          jpackage `
-            --name CreadorCraftLan `
-            --app-version 1.0.0-beta `
-            --input "${{ github.workspace }}\appJava\target\" `
-            --main-jar "CreadorCraftLan-1.0.0-beta.jar" `
-            --main-class org.CreadoresProgram.CreadorCraftLan.MainActivity `
-            --icon "${{ github.workspace }}\appJava\src\main\resources\ic_launcher.ico" `
-            --type exe `
-            --file-associations "${{ github.workspace }}\resourcesWindows\opencreadorcraftlan.assoc" `
-            --dest "${{ github.workspace }}\appJava\target\image" `
+          jpackage ^
+            --name CreadorCraftLan ^
+            --app-version 1.0.0-beta ^
+            --input "${{ github.workspace }}\appJava\target\" ^
+            --main-jar "\CreadorCraftLan-1.0.0-beta.jar" ^
+            --main-class org.CreadoresProgram.CreadorCraftLan.MainActivity ^
+            --icon "${{ github.workspace }}\appJava\src\main\resources\ic_launcher.ico" ^
+            --type exe ^
+            --file-associations "${{ github.workspace }}\resourcesWindows\opencreadorcraftlan.assoc" ^
+            --dest "${{ github.workspace }}\appJava\target\image" ^
             --verbose
       - name: UploadArtifact
         uses: actions/upload-artifact@v4
