--- a/.github/workflows/WindowsCI.yml
+++ b/.github/workflows/WindowsCI.yml
@@ -18,6 +18,9 @@ jobs:
         shell: cmd
         run: |
           mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile="${{ github.workspace }}\appJava\libs\DS-Desktop-Notify.jar" -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
+      - name: SubBuild with Maven
+        shell: cmd
+        run: |
           mvn -B package --file ${{ github.workspace }}\appJava\pom.xml
       - name: Build Windows App
         shell: cmd
