--- a/.github/workflows/WindowsCI.yml
+++ b/.github/workflows/WindowsCI.yml
@@ -2,7 +2,7 @@ name: WindowsCI
 on: [push, pull_request]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     if: ${{ !contains(github.event.head_commit.message, '[ci skip]') }}
     strategy:
       matrix:
@@ -15,24 +15,19 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: 'temurin'
       - name: Build with Maven
+        shell: cmd
         run: |
-          mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile=appJava/libs/DS-Desktop-Notify.jar -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
-          mvn -B package --file appJava/pom.xml
+          mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile="${{ github.workspace }}\appJava\libs\DS-Desktop-Notify.jar" -DgroupId=ds.descktop -DartifactId=DS-Desktop-Notify -Dversion=v0.91 -Dpackaging=jar -DgeneratePom=true
+      - name: SubBuild with Maven
+        shell: cmd
+        run: |
+          mvn -B package --file ${{ github.workspace }}\appJava\pom.xml
       - name: Build Windows App
+        shell: cmd
         run: |
-          jpackage \
-            --name CreadorCraftLan \
-            --app-version 1.0 \
-            --input appJava/target/ \
-            --main-jar CreadorCraftLan-1.0.0-beta.jar \
-            --main-class org.CreadoresProgram.CreadorCraftLan.MainActivity \
-            --icon appJava/src/main/resources/iclauncher.ico \
-            --type exe \
-            --file-associations resourcesWindows/opencreadorcraftlan.assoc \
-            --dest appJava/target/image \
-            --verbose
+          jpackage  --name CreadorCraftLan --app-version 1.0 --input "${{ github.workspace }}\\appJava\\target" --main-jar CreadorCraftLan-1.0.0-beta.jar --main-class org.CreadoresProgram.CreadorCraftLan.MainActivity --icon appJava\\src\\main\\resources\\iclauncher.ico --type exe --file-associations "${{ github.workspace }}\\resourcesWindows\\opencreadorcraftlan.assoc" --dest "${{ github.workspace }}\\appJava\\target\\image" --verbose
       - name: UploadArtifact
         uses: actions/upload-artifact@v4
         with:
-          name: CreadorCraftLan-Linux
+          name: CreadorCraftLan-Windows
           path: appJava/target/image/*
