--- a/.github/workflows/LinuxFedoraCI.yml
+++ b/.github/workflows/LinuxFedoraCI.yml
@@ -2,7 +2,7 @@ name: LinuxFedoraCI
 on: [push, pull_request]
 jobs:
   build:
-    runs-on: fedora-latest
+    runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, '[ci skip]') }}
     strategy:
       matrix:
