--- a/appAndroid/AndroidManifest.xml
+++ b/appAndroid/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name" android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-        <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.BROWSABLE" />
         <category android:name="android.intent.category.DEFAULT" />
         <data android:scheme="OpenCreadorCraftLan" android:host="*" />
